--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,18 @@
-body{
-			background-color: #dcd6f7;
-		}
-		hr{
-    width: 25%;
-    border-color: gray;
-    border-style: none;
-    border-top-style:dotted;
-    border-width: 5px;
-		}
-h1{
-	color:#82c4c3;
+#dgimg{
+	height:486px;
 }
-h3{
-	color: #82c4c3;
+#title{
+	background-color: #ff4c68;
+}
+h1{
+	font-size: 3rem;
+	line-height:1.5;
+	font-family:"Montserrat-Black";
+     font-weight: bold !important;
+}
+.container-fluid{
+	padding: 3% 15% !important;
+}
+.tindog{
+	background-color: #ff4c68;
 }
